# rust-on-mobile

./: 00-overview.html  01-setup.html  02-ferris-says-hi.html  03-cross-compiling.html  04-generating-headers.html  04-primitives-structs-enums.html  05-primitives-structs-enums.html  05-strings-memory.html  06-strings-memory.html  06-threads-callbacks.html  07-threads-callbacks.html  404.html  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
projects/ferris-says-hi/: Cargo.toml
projects/ferris-says-hi/examples/: say_it  say_it.c  say_it.rs
projects/ferris-says-hi/examples/FerrisSaysHiApp/FerrisSaysHiApp/: AppDelegate.swift  FerrisSaysHiApp-Bridging-Header.h  SceneDelegate.swift  ViewController.swift
projects/ferris-says-hi/examples/FerrisSaysHiApp/FerrisSaysHiApp.xcodeproj/: project.pbxproj
projects/ferris-says-hi/examples/FerrisSaysHiApp/FerrisSaysHiApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/ferris-says-hi/examples/FerrisSaysHiApp/FerrisSaysHiApp.xcodeproj/project.xcworkspace/xcuserdata/WangXingbin.xcuserdatad/: UserInterfaceState.xcuserstate
projects/ferris-says-hi/header/: ferris_says_hi.h
projects/ferris-says-hi/src/: lib.rs
projects/starwars/starwars-core/: Cargo.toml
projects/starwars/starwars-core/examples/: main.rs
projects/starwars/starwars-core/src/: lib.rs  swapi.rs
projects/starwars/starwars-ios/: Cargo.toml  build.rs
projects/starwars/starwars-ios/examples/: main.rs
projects/starwars/starwars-ios/src/ffi/: callback.rs  ios_ffi.rs  mod.rs  native_model.rs  starwars.h
(+20 files in other folders)
