[package]
name = "ferris-says-hi"
version = "0.1.0"
authors = ["Wang Xingbin <wangxingbin@didiglobal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ferris-says = "0.2.0"