[package]
name = "starwars-ios"
version = "0.1.0"
authors = ["王兴彬_Binboy <binboy@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "starwars"
crate-type = ["staticlib", "lib"]

[build-dependencies]
cbindgen = "0.14"

[dependencies]
starwars-core = { path = "../starwars-core" }